--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -1,41 +1,71 @@
+/* Foreground color definition */
+body { color : #FFFFFF; }
+.topmenu, .topmenu a { color : #FFFFFF; }
+.topmenu a:hover { color : #666666; }
+.tableh1, .tableh1a, .tableh1_compact, .navmenu, .navmenu a, .sortorder_cell, .sortorder_options, .statlink, .statlink a, .statlink a:hover { color : #FFC956; }
+.tableh2, .tableh2_compact { color : #FFC956; }
+.textinput, .listbox, .radio, .checkbox { color: #FFFFFF; }
+.alblink, .alblink a, .catlink, .catlink a { color : #FFC956; }
+.alblink a:hover, .catlink a:hover { color : #FFE8B7; }
+a,  .bblink a, .user_thumb_infobox a  { color: #447AC9; }
+a:hover, .bblink a:hover, .user_thumb_infobox a:hover { color : #0397FF; }
+.button, .comment_button, .admin_menu_thumb, .admin_menu_thumb a, .admin_menu_thumb a:hover, .admin_menu, .admin_menu a, .admin_menu a:hover { color : #FFFFFF; }
+.comment_date { color : #999999; }
+.footer, .footer a, .footer a:hover { color : #999999; }
+
+/* Background colors definition */
+body { background-color: #000000; }
+.textinput, .listbox, .radio, .checkbox { background-color: #000000; }
+.tableh1, .tableh1_compact, .navmenu, .navmenu a, .navmenu a:hover  { 	background : #000000 ; }
+.tableh2, .tableh2_compact, .tablef, .img_caption_table th { 	background : #000000 ; }
+.tableb, .tableb_compact, .thumbnails, .img_caption_table td { background : #000000 ; }
+
+/* Borders for input controls */
+.textinput, .listbox, .button, .comment_button, .admin_menu, .admin_menu_thumb  {	border: 1px solid #666666; }
+.image { border: 1px solid #FFFFFF; }
+.maintable, .maintableb { background-color: #000000; } 
+.img_caption_table th, .img_caption_table td { border-top : 1px solid #000000; }
+.tableh1 { border-bottom : 1px solid #447AC9; } 
+
+/* Fonts definition */
+body { font-family: Arial, Helvetica, sans-serif; }
+.tableh1, .tableh1a, .catlink, .tableh2 { font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; }
+.textinput, .listbox, .radio, .checkbox { font-family: Arial, Helvetica, sans-serif; }
+.button, .comment_button, .sortorder_options, .admin_menu_thumb { font-family: Arial, Helvetica, sans-serif; }
+
+table {
+	font-size : 12px;
+}
+
 body {
-	font-family : Verdana, Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	background : #758698 ;
-	color : Black;
+	font-size : 12px;
 	margin: 0px;
 }
 
-table {
-	font-size: 12px;
-}
-
 h1{
-	font-size: 32px;
+	font-weight: normal;
+	font-size: 24px;
 	font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
 	text-decoration: none;
-	color : White;
-	margin: 2px;
-	font-style : italic;
+	color: #000000;
+	margin: 0px;
 }
 
 h2 {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 	margin: 0px;
-	color : White;
-	font-style : italic;
 }
 
 h3 {
 	font-weight: normal;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	margin: 2px;
+	font-family: "Trebuchet MS", Verdana, Geneva, Arial, sans-serif;
+	font-size: 14px;
+	color: #999999;
+	margin: 0px;
 }
 
 p {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	margin: 2px 0px;
 }
@@ -54,101 +84,119 @@ li {
 	list-style-type: disc;
 }
 
+.top_panel td {
+	white-space: nowrap;
+}
+
+.top_menu_bttn a {
+	text-decoration: none;
+	position: relative;
+	display: block;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-size: 12px;
+	color: #FFFFFF;
+}
+
+.top_menu_bttn a:hover {
+	text-decoration: underline;
+	margin-top: 2px;
+	color: #FFFFFF;
+}
+
 .textinput {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 100%;
-	border: 1px solid #A3AAB4;
 	padding-right: 3px;
 	padding-left: 3px;
-	background-color : #DEDEDE;
 }
 
 .listbox {
-	font-family: Verdana, Arial, Arial, Helvetica, sans-serif;
-	background-color : #DEDEDE;
 	font-size: 100%;
-	border: 1px solid #A3AAB4;
 	vertical-align : middle;
 }
 
 .button {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
-	border: 1px solid #005D8C;
 	background-image : url(images/button_bg.gif);
 	background-position : bottom;
+	height: 20px;
 }
 
 .comment_button {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
-	border: 1px solid #005D8C;
 	background-image : url(images/button_bg.gif);
 	background-position : bottom;
 	padding-left: 3px;
 	padding-right: 3px;
+	height: 20px;
 }
 
 .radio {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	vertical-align : middle;
 }
 
 .checkbox {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	vertical-align : middle;
 }
 
 a {
-	color: #0033CC;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #0033CC;
 	text-decoration: underline;
 }
 
-bblink a {
-	color: #0033CC;
+.bblink a {
 	text-decoration: none;
 }
 
-bblink a:hover {
-	color: #0033CC;
+.bblink a:hover {
 	text-decoration: underline;
 }
 
 .maintable {
-	border: 1px solid #DEDEDE;
-	background-color: #292E34;
-	margin-top: 1px;
-	margin-bottom: 1px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.maintablea {
+	margin-top: 10px;
+}
+
+.maintableb {
 }
 
 .tableh1 {
-	background : #66707C ;
-	color : #FFFFFF;
-	padding-top: 3px;
 	padding-right: 10px;
-	padding-bottom: 3px;
 	padding-left: 10px;
+	height: 25px;
+}
+
+.tableh1a td {
+	border: none;
+	height: 30px;
+	font-size: 150%;
+	font-weight: bold;
+	background-image: url(images/tableh1a_bg_middle.gif);
+	background-position: bottom;
+}
+
+.tableh1a img {
+	display: block;
 }
 
 .tableh1_compact {
-	background : #66707C ;
-	color : #FFFFFF;
 	padding-top: 2px;
 	padding-right: 5px;
 	padding-bottom: 2px;
 	padding-left: 5px;
+	height: 25px;
 }
 
 .tableh2 {
-	background: #A3AAB4 ;
-	color : #000000;
 	padding-top: 3px;
 	padding-right: 10px;
 	padding-bottom: 3px;
@@ -156,8 +204,6 @@ bblink a:hover {
 }
 
 .tableh2_compact {
-	background: #A3AAB4 ;
-	color : #000000;
 	padding-top: 2px;
 	padding-right: 5px;
 	padding-bottom: 2px;
@@ -165,7 +211,6 @@ bblink a:hover {
 }
 
 .tableb {
-	background: #C2C9D3 ;
 	padding-top: 3px;
 	padding-right: 10px;
 	padding-bottom: 3px;
@@ -173,7 +218,6 @@ bblink a:hover {
 }
 
 .tableb_compact {
-	background: #C2C9D3 ;
 	padding-top: 2px;
 	padding-right: 5px;
 	padding-bottom: 2px;
@@ -181,7 +225,6 @@ bblink a:hover {
 }
 
 .tablef {
-	background: #A3AAB4;
 	padding-top: 10px;
 	padding-right: 10px;
 	padding-bottom: 10px;
@@ -208,12 +251,12 @@ bblink a:hover {
 
 .thumb_caption a {
 	text-decoration: underline;
-	color: #000000;
 }
+
 
 .thumb_num_comments {
 	font-weight: normal;
-	font-size: 80%;
+	font-size: 85%;
 	padding: 2px;
 	font-style : italic;
 	display : block;
@@ -225,7 +268,7 @@ bblink a:hover {
 }
 
 .user_thumb_infobox th {
-	font-weight : bold;
+	font-weight : normal;
 	font-size: 100%;
 	margin-top: 1px;
 	margin-bottom: 1px;
@@ -241,72 +284,47 @@ bblink a:hover {
 
 .user_thumb_infobox a {
 	text-decoration: none;
-	color: #000000;
 }
 
 .user_thumb_infobox a:hover {
-	color: #000000;
 	text-decoration: underline;
 }
 
-.sortorder_cell {
-	background : #66707C ;
-	color : #FFFFFF;
-	padding: 0px;
-	margin: 0px;
-}
-
 .sortorder_options {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	background : #66707C ;
-	color : #FFFFFF;
 	padding: 0px;
 	margin: 0px;
 	font-weight: normal;
-	font-size: 80%;
+	font-size: 50%;
 	white-space: nowrap;
 }
 
 .navmenu {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	color: #FFFFFF;
-	font-size: 100%;
 	font-weight: bold;
-	background : #66707C ;
-	border-style: none;
+	border: none;
 }
 
 .navmenu img {
-	margin-top: 1px;
-	margin-right: 5px;
-	margin-bottom: 1px;
-	margin-left: 5px;
+	display: block;
 }
 
 .navmenu a {
 	position: relative;
 	display: block;
-	padding-top: 2px;
-	padding-right: 5px;
-	padding-bottom: 2px;
 	padding-left: 5px;
+	padding-right: 5px;
 	text-decoration: none;
-	color: #FFFFFF;
+	line-height: 25px;
+	height : 25px;
 }
 
 .navmenu a:hover {
-	background : #C2C9D3 ;
 	text-decoration: none;
-	color: 	#000000;
 }
 
 .admin_menu_thumb {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 85%;
-	border: 1px solid #005D8C;
+	font-size: 90%;
 	background-image : url(images/button_bg.gif);
 	background-position : bottom;
-	color: #000000;
 	font-weight: bold;
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -314,7 +332,6 @@ bblink a:hover {
 }
 
 .admin_menu_thumb a {
-	color: #000000;
 	text-decoration: none;
 	display: block;
 	position: relative;
@@ -326,23 +343,18 @@ bblink a:hover {
 
 
 .admin_menu_thumb a:hover {
-	color: #000000;
 	text-decoration: underline;
 }
 
 .admin_menu {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 85%;
-	border: 1px solid #005D8C;
+	font-size: 90%;
 	background-image : url(images/button_bg.gif);
 	background-position : bottom;
-	color: #000000;
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
 
 .admin_menu a {
-	color: #000000;
 	text-decoration: none;
 	display: block;
 	position: relative;
@@ -353,64 +365,47 @@ bblink a:hover {
 }
 
 .admin_menu a:hover {
-	color: #000000;
 	text-decoration: underline;
 }
 
 .comment_date{
-	color : #5F5F5F;
-	font-size : 90%;
+	font-size: 90%;
 	vertical-align : middle;
 }
 
 .image {
-	border-style: solid;
-	border-width:1;
-	border-color: #000000;
 	margin: 2px;
 }
 
 .thumbnails {
-	background: #C2C9D3 ;
-	padding: 5px;
+	padding: 10px;
 }
 
 .footer {
-	font-size: 9px;
-	color: #FFFFFF;
+	font-size : 9px;
 }
 
 .footer a {
 	text-decoration: none;
-	color: #FFFFFF;
 }
 
 .footer a:hover {
-	color: #FFFFFF;
 	text-decoration: underline;
-}
-
-.statlink {
-	color: #FFFFFF;
 }
 
 .statlink a {
 	text-decoration: none;
-	color: #FFFFFF;
 }
 
 .statlink a:hover {
-	color: #FFFFFF;
 	text-decoration: underline;
 }
 
 .alblink a {
 	text-decoration: underline;
-	color: #000000;
 }
 
 .alblink a:hover {
-	color: #000000;
 	text-decoration: underline;
 }
 
@@ -421,57 +416,42 @@ bblink a:hover {
 
 .catlink a {
 	text-decoration: underline;
-	color: #000000;
 }
 
 .catlink a:hover {
-	color: #000000;
 	text-decoration: underline;
 }
 
 .topmenu {
-	font-size : 100%;
+	line-height : 130%;
+	font-size : 110%;
 }
 
 .topmenu a {
-	color : #FFFFFF;
-	text-decoration : none;
-}
-
-.topmenu a:hover  {
-	color : #FFFFFF;
 	text-decoration : underline;
 }
 
-.topmenu td  {
-	white-space: nowrap;
-	font-weight : bold;
+.topmenu a:hover  {
+	text-decoration : underline;
 }
-
 
 .img_caption_table {
 	border: none;
-	background-color: #FFFFFF;
 	width : 100%;
 	margin : 0px;
 }
 
 .img_caption_table th {
-	background: #A3AAB4 ;
 	font-size : 100%;
-	color : #000000;
 	padding-top: 4px;
 	padding-right: 10px;
 	padding-bottom: 4px;
 	padding-left: 10px;
-	border-top : 1px solid #FFFFFF;
 }
 
 .img_caption_table td {
-	background: #C2C9D3 ;
 	padding-top: 6px;
 	padding-right: 10px;
 	padding-bottom: 6px;
 	padding-left: 10px;
-	border-top : 1px solid #FFFFFF;
 }
