--- a/devel/installer.css
+++ b/devel/installer.css
@@ -82,6 +82,24 @@ a:hover {
 	padding-left: 10px;
 }
 
+.updatesOK {
+	background: #EFEFEF ;
+	padding-top: 8px;
+	padding-right: 10px;
+	padding-bottom: 8px;
+	padding-left: 10px;
+	font-weight: bold;
+	color: green;
+}
+
+.updatesFail {
+	background: #EFEFEF ;
+	padding-top: 8px;
+	padding-right: 10px;
+	padding-bottom: 8px;
+	padding-left: 10px;
+}
+
 .maintable {
 	border: 1px solid #0E72A4;
 	background-color: #FFFFFF;
