changed footer style, so copyright tag is visible (see http://coppermine.sourceforge.net/board/viewtopic.php?t=250 )
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@150 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -391,16 +391,16 @@ bblink a:hover {
 
 .footer {
         font-size: 9px;
-        color: #49525D;
+        color: #000000;
 }
 
 .footer a {
         text-decoration: none;
-        color: #49525D;
+        color: #949494;
 }
 
 .footer a:hover {
-        color: #49525D;
+        color: #000000;
         text-decoration: none;
 }
 
