--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -398,7 +398,7 @@ a:hover.yebg {
 
 .image {
         border-style: solid;
-        border-width:1;
+        border-width:1px;
         border-color: #000000;
         margin: 2px;
 }
@@ -480,7 +480,7 @@ a:hover.yebg {
     border-left-width: 0px;
     background: #6BBE10;
     background-image : url(images/button_bg.gif);
-    background-position : middle;
+    background-position: middle;
     border-bottom-width: 0px;
     margin: 0px 0px 2px;
     color: #625b55;
