fixed cosmetical bug, see http://coppermine.sourceforge.net/board/viewtopic.php?t=420 - GauGau
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@225 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/default/style.css
+++ b/devel/themes/default/style.css
@@ -336,6 +336,7 @@ bblink a:hover {
         color: #000000;
         margin-top: 0px;
         margin-bottom: 0px;
+        text-align: center;
 }
 
 .admin_menu a {
