--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -353,6 +353,7 @@ bblink a:hover {
         color:#cccccc;
         margin-top: 0px;
         margin-bottom: 0px;
+        text-align: center;
 }
 
 .admin_menu a {
