--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -371,6 +371,7 @@ a:hover.yebg {
         color: #000000;
         margin-top: 0px;
         margin-bottom: 0px;
+        text-align: center;
 }
 
 .admin_menu a {
