--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -343,6 +343,7 @@ bblink a:hover {
         color: #000000;
         margin-top: 0px;
         margin-bottom: 0px;
+        text-align: center;
 }
 
 .admin_menu a {
