Changed yes_no dropdown in config to radio buttons
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@377 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/igames/style.css
+++ b/devel/themes/igames/style.css
@@ -532,3 +532,15 @@ a:hover {
         padding-bottom: 6px;
         padding-left: 10px;
 }
+
+.debug_text {
+        border: #BDBEBD;
+        background-color: #EFEFEF;
+        width : 100%;
+        margin : 0px;
+}
+
+.clickable_option {
+        font-weight: bold;
+        cursor : hand;
+}
