--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -912,3 +912,15 @@ a:hover {
         padding-left: 10px;
 
 }
+
+.debug_text {
+        border: #BDBEBD;
+        background-color: #EFEFEF;
+        width : 100%;
+        margin : 0px;
+}
+
+.clickable_option {
+        border-bottom : 1px dotted blue;
+        cursor : hand;
+}
