--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -528,3 +528,16 @@ a:hover.yebg {
         padding-left: 10px;
         border-top : 1px solid #FFFFFF;
 }
+
+.debug_text {
+        border: #BDBEBD;
+        background-color: #EFEFEF;
+        width : 100%;
+        margin : 0px;
+}
+
+.clickable_option {
+        color: #6BBE10;
+        font-weight: bold;
+        cursor : hand;
+}
