--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -496,3 +496,15 @@ bblink a:hover {
         color:#4C5157;
         font-size:20px;
 }
+
+.debug_text {
+        border: #BDBEBD;
+        background-color: #EFEFEF;
+        width : 100%;
+        margin : 0px;
+}
+
+.clickable_option {
+        border-bottom : 1px dotted #444444;
+        cursor : hand;
+}
