uncommented "position: relative;" (was causing problems with rtl-languages, see tracker 848771)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@396 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/default/style.css
+++ b/devel/themes/default/style.css
@@ -281,7 +281,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        position: relative;
+        /*position: relative;*/
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -314,7 +314,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -343,7 +343,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
