--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -316,7 +316,7 @@ a:hover.yebg {
 }
 
 .navmenu a {
-        position: relative;
+        /*position: relative;*/
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -349,7 +349,7 @@ a:hover.yebg {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -378,7 +378,7 @@ a:hover.yebg {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
