--- a/devel/themes/mac_ox_x/style.css
+++ b/devel/themes/mac_ox_x/style.css
@@ -194,7 +194,7 @@ li {
 
         text-decoration: none;
 
-        position: relative;
+        /*position: relative;*/
 
         display: block;
 
@@ -626,7 +626,7 @@ a:hover {
 
 .navmenu a {
 
-        position: relative;
+        /*position: relative;*/
 
         display: block;
 
@@ -680,7 +680,7 @@ a:hover {
 
         display: block;
 
-        position: relative;
+        /*position: relative;*/
 
         padding-top: 1px;
 
@@ -727,7 +727,7 @@ a:hover {
 
         display: block;
 
-        position: relative;
+        /*position: relative;*/
 
         padding-top: 1px;
 
