--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -69,7 +69,7 @@ li {
         background-position : left;
         padding-left : 12px;
         padding-right : 6px;
-        position: relative;
+        /*position: relative;*/
         display: block;
         height : 35px;
         line-height : 35px;
@@ -92,7 +92,7 @@ li {
         background-position : right;
         padding-right : 22px;
         padding-left : 6px;
-        position: relative;
+        /*position: relative;*/
         display: block;
         height : 35px;
         line-height : 35px;
@@ -114,7 +114,7 @@ li {
         background-position : left;
         padding-left : 6px;
         padding-right : 6px;
-        position: relative;
+        /*position: relative;*/
         display: block;
         height : 35px;
         line-height : 35px;
@@ -360,7 +360,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        position: relative;
+        /*position: relative;*/
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -393,7 +393,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -422,7 +422,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
