--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -300,7 +300,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        position: relative;
+        /*position: relative;*/
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -332,7 +332,7 @@ bblink a:hover {
         color: #CCCCCC;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -360,7 +360,7 @@ bblink a:hover {
         color: #AEAEAE;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
