--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -288,7 +288,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        position: relative;
+        /*position: relative;*/
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -321,7 +321,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -350,7 +350,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        position: relative;
+        /*position: relative;*/
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
