moved alignement into css, see tracker 851077
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@400 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/default/style.css
+++ b/devel/themes/default/style.css
@@ -271,6 +271,8 @@ bblink a:hover {
         font-weight: bold;
         background : #0E72A4 ;
         border-style: none;
+        vertical-align: middle;
+        text-align: center;
 }
 
 .navmenu img {
