--- a/devel/themes/igames/style.css
+++ b/devel/themes/igames/style.css
@@ -370,6 +370,8 @@ a:hover {
         font-weight: bold;
         border: none;
         background-image: url(images/tableh1_bg.gif);
+        vertical-align: middle;
+        text-align: center;
 }
 
 .navmenu img {
