moved alignement of thumbnails from theme to css, as suggested in tracker 848776
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@402 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/default/style.css
+++ b/devel/themes/default/style.css
@@ -373,6 +373,15 @@ bblink a:hover {
 .thumbnails {
         background: #EFEFEF ;
         padding: 5px;
+        vertical-align: middle;
+        text-align: center;
+}
+
+.thumbnails_top {
+        background: #EFEFEF ;
+        padding: 5px;
+        vertical-align: top;
+        text-align: center;
 }
 
 .footer {
