--- a/devel/themes/mac_ox_x/style.css
+++ b/devel/themes/mac_ox_x/style.css
@@ -387,6 +387,14 @@ a:hover {
 
 .thumbnails {
         padding: 5px;
+        vertical-align: middle;
+        text-align: center;
+}
+
+.thumbnails_top {
+        padding: 5px;
+        vertical-align: top;
+        text-align: center;
 }
 
 .footer {
