--- a/devel/themes/rainy_day/style.css
+++ b/devel/themes/rainy_day/style.css
@@ -376,6 +376,15 @@ bblink a:hover {
 .thumbnails {
         background: #C2C9D3 ;
         padding: 5px;
+        vertical-align: middle;
+        text-align: center;
+}
+
+.thumbnails_top {
+        background: #C2C9D3 ;
+        padding: 5px;
+        vertical-align: top;
+        text-align: center;
 }
 
 .footer {
