added language and theme selection - GauGau
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@405 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -290,8 +290,6 @@ bblink a:hover {
         font-weight: bold;
         background : #49525D ;
         border-style: none;
-        vertical-align: middle;
-        text-align: center;
 }
 
 .navmenu img {
@@ -302,7 +300,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        /*position: relative;*/
+        position: relative;
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -334,7 +332,7 @@ bblink a:hover {
         color: #CCCCCC;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -362,7 +360,7 @@ bblink a:hover {
         color: #AEAEAE;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -390,15 +388,6 @@ bblink a:hover {
 .thumbnails {
         background: #49525D ;
         padding: 5px;
-        vertical-align: middle;
-        text-align: center;
-}
-
-.thumbnails_top {
-        background: #49525D ;
-        padding: 5px;
-        vertical-align: top;
-        text-align: center;
 }
 
 .footer {
@@ -518,4 +507,13 @@ bblink a:hover {
 .clickable_option {
         border-bottom : 1px dotted #444444;
         cursor : hand;
+}
+
+.listbox_lang {
+        color: #BDBEBD;
+        background-color: #4F5864;
+        border: 1px solid #4F5864;
+        font-size: 90%;
+        font-family: Arial, Helvetica, sans-serif;
+        vertical-align : middle;
 }
