--- a/devel/themes/default/style.css
+++ b/devel/themes/default/style.css
@@ -271,8 +271,6 @@ bblink a:hover {
         font-weight: bold;
         background : #0E72A4 ;
         border-style: none;
-        vertical-align: middle;
-        text-align: center;
 }
 
 .navmenu img {
@@ -283,7 +281,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        /*position: relative;*/
+        position: relative;
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -316,7 +314,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -345,7 +343,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -373,15 +371,6 @@ bblink a:hover {
 .thumbnails {
         background: #EFEFEF ;
         padding: 5px;
-        vertical-align: middle;
-        text-align: center;
-}
-
-.thumbnails_top {
-        background: #EFEFEF ;
-        padding: 5px;
-        vertical-align: top;
-        text-align: center;
 }
 
 .footer {
@@ -489,4 +478,14 @@ bblink a:hover {
 .clickable_option {
         border-bottom : 1px dotted blue;
         cursor : hand;
+}
+
+.listbox_lang {
+        color: #000000;
+        background-color: #D1D7DC;
+        border: 1px solid #D1D7DC;
+        font-size: 80%;
+        font-family: Arial, Helvetica, sans-serif;
+        vertical-align : middle;
+
 }
