--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -306,8 +306,6 @@ a:hover.yebg {
         font-weight: bold;
         background : #6BBE10 ;
         border-style: none;
-        vertical-align: middle;
-        text-align: center;
 }
 
 .navmenu img {
@@ -318,7 +316,7 @@ a:hover.yebg {
 }
 
 .navmenu a {
-        /*position: relative;*/
+        position: relative;
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -351,7 +349,7 @@ a:hover.yebg {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -380,7 +378,7 @@ a:hover.yebg {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -409,15 +407,6 @@ a:hover.yebg {
 .thumbnails {
         background: #E7F38C ;
         padding: 5px;
-        vertical-align: middle;
-        text-align: center;
-}
-
-.thumbnails_top {
-        background: #E7F38C ;
-        padding: 5px;
-        vertical-align: top;
-        text-align: center;
 }
 
 .footer {
@@ -552,3 +541,26 @@ a:hover.yebg {
         font-weight: bold;
         cursor : hand;
 }
+
+.listbox_lang {
+        color: #000000;
+        background-color: #E7F38C;
+        border: 1px solid #6BBE10;
+        font-size: 80%;
+        font-family: Arial, Helvetica, sans-serif;
+        vertical-align : middle;
+}
+
+/* Colors used:                                */
+/* --------------------------------------------*/
+/* #FFFFFF = RBG 255,255,255 = (white)         */
+/* #000000 = RBG   0,  0,  0 = (black)         */
+/* #FFA600 = RGB 255,166,  0 = (orange)        */
+/* #6BBE10 = RGB 107,190, 16 = (green)         */
+/* #FFFF00 = RGB 255,255,  0 = (yellow)        */
+/* #D1D7DC = RGB 209,215,220 = (light grey)    */
+/* #F7F37B = RGB 247,243,123 = (light yellow)  */
+/* #5F5F5F = RGB  95, 95, 95 = (dark grey)     */
+/* #E7F38C = RGB 239,243,140 = (light green)   */
+/* if you don't like a color, just do a search */
+/* and replace on the hex color...
