--- a/devel/themes/rainy_day/style.css
+++ b/devel/themes/rainy_day/style.css
@@ -274,8 +274,6 @@ bblink a:hover {
         font-weight: bold;
         background : #66707C ;
         border-style: none;
-        vertical-align: middle;
-        text-align: center;
 }
 
 .navmenu img {
@@ -286,7 +284,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        /*position: relative;*/
+        position: relative;
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -319,7 +317,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -348,7 +346,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -376,15 +374,6 @@ bblink a:hover {
 .thumbnails {
         background: #C2C9D3 ;
         padding: 5px;
-        vertical-align: middle;
-        text-align: center;
-}
-
-.thumbnails_top {
-        background: #C2C9D3 ;
-        padding: 5px;
-        vertical-align: top;
-        text-align: center;
 }
 
 .footer {
@@ -498,4 +487,13 @@ bblink a:hover {
 .clickable_option {
         border-bottom : 1px dotted #758698;
         cursor : hand;
+}
+
+.listbox_lang {
+        color: #000000;
+        background-color: #758698;
+        border: 1px solid #758698;
+        font-size: 80%;
+        font-family: Arial, Helvetica, sans-serif;
+        vertical-align : middle;
 }
