--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -3,7 +3,7 @@ body {
         background-color: #f2f5f7;
         font-family: "Trebuchet MS", Verdana, Geneva, Arial, sans-serif;
         font-size : 12px;
-        color: #666;
+        color: #000666;
         margin: 0px;
 }
 
@@ -278,8 +278,6 @@ bblink a:hover {
         font-weight: bold;
         background : #8AA5B5 ;
         border-style: none;
-        vertical-align: middle;
-        text-align: center;
 }
 
 .navmenu img {
@@ -290,7 +288,7 @@ bblink a:hover {
 }
 
 .navmenu a {
-        /*position: relative;*/
+        position: relative;
         display: block;
         padding-top: 2px;
         padding-right: 5px;
@@ -323,7 +321,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -352,7 +350,7 @@ bblink a:hover {
         color: #000000;
         text-decoration: none;
         display: block;
-        /*position: relative;*/
+        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 10px;
@@ -488,4 +486,13 @@ bblink a:hover {
 .clickable_option {
         border-bottom : 1px dotted blue;
         cursor : hand;
+}
+
+.listbox_lang {
+        color: #000666;
+        background-color: #f2f5f7;
+        border: 1px solid #f2f5f7;
+        font-size: 80%;
+        font-family: Arial, Helvetica, sans-serif;
+        vertical-align : middle;
 }
