--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -375,6 +375,13 @@ bblink a:hover {
         margin: 2px;
 }
 
+.imageborder {
+        border: 1px solid #000000;
+        background-color: #FFFFFF;
+        margin-top: 30px;
+        margin-bottom: 30px;
+}
+
 .thumbnails {
         background: #F2F5F7 ;
         padding: 5px;
