--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -404,6 +404,13 @@ a:hover.yebg {
         margin: 2px;
 }
 
+.imageborder {
+        border: 1px solid #000000;
+        background-color: #FFFFFF;
+        margin-top: 30px;
+        margin-bottom: 30px;
+}
+
 .thumbnails {
         background: #E7F38C ;
         padding: 5px;
