--- a/devel/themes/rainy_day/style.css
+++ b/devel/themes/rainy_day/style.css
@@ -371,6 +371,14 @@ bblink a:hover {
         margin: 2px;
 }
 
+.imageborder {
+        border: 1px solid #000000;
+        background-color: #FFFFFF;
+        margin-top: 30px;
+        margin-bottom: 30px;
+}
+
+
 .thumbnails {
         background: #C2C9D3 ;
         padding: 5px;
