--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -1,3 +1,7 @@
+/*
+$Id$
+*/
+
 /* Colors used:                                */
 /* --------------------------------------------*/
 /* #FFFFFF = RBG 255,255,255 = (white)         */
