--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -1,3 +1,7 @@
+/*
+$Id$
+*/
+
 body {
         background-color: #FAFAFA;
         font-family: "Trebuchet MS", Verdana, Geneva, Arial, sans-serif;
