fixed admin menu buttons for non-english languages
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@660 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/igames/style.css
+++ b/devel/themes/igames/style.css
@@ -431,6 +431,8 @@ a:hover {
         font-size: 90%;
         background-image : url(images/button_bg.gif);
         background-position : bottom;
+        background-repeat: repeat-x;
+        background-color: #BFC0C3;
         margin-top: 0px;
         margin-bottom: 0px;
         text-align: center;
