--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -261,7 +261,10 @@ bblink a:hover {
 .sortorder_cell {
         background : #8AA5B5 ;
         color: #FFFFFF;
-        padding: 0px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-left: 0px;
+        padding-right: 20px;
         margin: 0px;
 }
 
@@ -341,9 +344,11 @@ bblink a:hover {
 .admin_menu {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 90%;
-        border: 1px solid #ccd7e0;
+        border: 1px solid #CCD7E0;
         background-image : url(images/button_bg.gif);
         background-position : bottom;
+        background-repeat: repeat-x;
+        background-color: #FFFFFF;
         color: #000000;
         margin-top: 0px;
         margin-bottom: 0px;
