Added flashing approval button if pics require admin approval
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1012 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -395,6 +395,10 @@ a:hover.yebg {
         background: #FFA600;
 }
 
+td #admin_menu_anim {
+        background-image : url(images/button_bg_anim.gif);
+}
+
 .comment_date{
         color : #5F5F5F;
         font-size : 10px;
