--- a/devel/themes/classic/style.css
+++ b/devel/themes/classic/style.css
@@ -359,6 +359,10 @@ bblink a:hover {
         text-decoration: underline;
 }
 
+td #admin_menu_anim {
+        background-image : url(images/button_bg_anim.gif);
+}
+
 .comment_date{
         color : #5F5F5F;
         font-size : 90%;
