--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -461,6 +461,9 @@ a:hover {
         text-decoration: underline;
 }
 
+td #admin_menu_anim {
+        background-image : url(images/button_bg_anim.gif);
+}
 
 .comment_date{
         font-size: 90%;
@@ -588,5 +591,4 @@ a:hover {
         font-family: Arial, Helvetica, sans-serif;
         vertical-align : middle;
 }
-
 
