fix for Mozilla not wrapping long text in caption
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1324 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -540,6 +540,7 @@ td #admin_menu_anim {
         padding-bottom: 6px;
         padding-left: 10px;
         border-top : 1px solid #394049;
+        white-space: normal;
 }
 
 .gal_name
