--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -568,6 +568,7 @@ td #admin_menu_anim {
         padding-bottom: 6px;
         padding-left: 10px;
         border-top : 1px solid #000000;
+        white-space: normal;
 }
 
 .debug_text {
