--- a/devel/themes/igames/style.css
+++ b/devel/themes/igames/style.css
@@ -563,6 +563,7 @@ td #admin_menu_anim {
         padding-right: 10px;
         padding-bottom: 6px;
         padding-left: 10px;
+        white-space: normal;
 }
 
 .debug_text {
