--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -19,7 +19,7 @@ h1{
         font-size: 28px;
         text-decoration: none;
         padding-left : 20px;
-        color: #FFFFFF;
+        color: #333333;
         margin: 2px;
 }
 
@@ -189,7 +189,7 @@ bblink a:hover {
 }
 
 .maintable {
-        background-color: #333333;
+        background-color: #999999;
         margin-top: 2px;
         margin-bottom: 2px;
 }
