edit so table cells without albums would have matching colors to cells that do
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1517 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/classic/style.css
+++ b/devel/themes/classic/style.css
@@ -137,7 +137,8 @@ bblink a:hover {
 
 .maintable {
         border: 1px solid #0E72A4;
-        background-color: #FFFFFF;
+/*        background-color: #FFFFFF;*/
+        background-color: #efefef;
         margin-top: 1px;
         margin-bottom: 1px;
 }
