--- a/devel/themes/classic/style.css
+++ b/devel/themes/classic/style.css
@@ -512,7 +512,7 @@ td #admin_menu_anim {
 
 .clickable_option {
         border-bottom : 1px dotted blue;
-        cursor : hand;
+        cursor : default;
 }
 
 .listbox_lang {
